--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,7 @@
+plugins{
+    id 'com.android.application'
+    id 'kotlin-android'
+}
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
@@ -60,4 +64,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.multidex:multidex:2.0.1"
 }
